[package]
name = "ferry"
version = "0.2.1"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive"] }
miette = { version = "7.2.0", features = ["fancy"] }
thiserror = "1.0.58"


# small optimizations in debug builds
[profile.dev]
opt-level = 1

# enable high optimizations for deps but not for our code
[profile.dev.package."*"]
opt-level = 3
# Add the contents of this file to `config.toml` to enable "fast build" configuration. Please read the notes below.

# NOTE: For maximum performance, build using a nightly compiler
# If you are using rust stable, remove the "-Zshare-generics=y" below.

[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = [
    "-Clink-arg=-fuse-ld=lld", # Use LLD Linker
    # "-Zshare-generics=y",      # (Nightly) Make the current crate share its generic instantiations
    # "-Zthreads=0",             # (Nightly) Use improved multithreading with the recommended amount of threads.
]

# NOTE: you must install [Mach-O LLD Port](https://lld.llvm.org/MachO/index.html) on mac. you can easily do this by installing llvm which includes lld with the "brew" package manager:
# `brew install llvm`
[target.x86_64-apple-darwin]
rustflags = [
    "-Clink-arg=-fuse-ld=/usr/local/opt/llvm/bin/ld64.lld", # Use LLD Linker
    # "-Zshare-generics=y",                                   # (Nightly) Make the current crate share its generic instantiations
    # "-Zthreads=0",                                          # (Nightly) Use improved multithreading with the recommended amount of threads.
]

[target.aarch64-apple-darwin]
rustflags = [
    "-Clink-arg=-fuse-ld=/opt/homebrew/opt/llvm/bin/ld64.lld", # Use LLD Linker
    # "-Zshare-generics=y",                                      # (Nightly) Make the current crate share its generic instantiations
    # "-Zthreads=0",                                             # (Nightly) Use improved multithreading with the recommended amount of threads.
]

[target.x86_64-pc-windows-msvc]
linker = "rust-lld.exe" # Use LLD Linker
rustflags = [
    # "-Zshare-generics=n", # (Nightly)
    # "-Zthreads=0",        # (Nightly) Use improved multithreading with the recommended amount of threads.
]
