[package]
name = "ferry"
version = "0.2.4"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.88"
clap = { version = "4.5.17", features = ["derive"] }
# inkwell = { version = "0.5.0", features = ["llvm18-0"] }
miette = { version = "7.2.0", features = ["fancy"] }
thiserror = "1.0.63"
# llvm-sys-180 = { package = "llvm-sys", version = "180", features = [
#     "prefer-static",
# ] }

[lints.clippy]
perf = "warn"
correctness = "warn"
complexity = "warn"
suspicious = "warn"
style = "warn"
# pedantic = "warn"

[profile.dev]
lto = "thin"

[profile.release]
lto = "fat"

[[example]]
name = "perf"
